# fin_report_bot

./: Dockerfile  README.md  config.py  db.py  docker-compose.yml  main.py  pyproject.toml  test.py  test2.py
clients/: interfax.py  interfax_client.py
handlers/: __init__.py  companies.py  search.py  start.py
keyboards/: main.py
services/: dispatcher.py  scheduler.py
utils/: cleaner.py  minio_client.py  token_storage.py
