[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram~=3.5",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "loguru~=0.7",
    "minio>=7.2.15",
    "py7zr>=1.0.0",
    "pydantic>=2.11.3",
    "python-dotenv~=1.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "bot",
]

[tool.uv.sources]
bot = { workspace = true }
